# myrts-monorepo

./: .gitignore  LICENSE.md  README.md
.github/workflows/: api.yaml
frontend/: package.json  pnpm-lock.yaml  svelte.config.js  tailwind.config.js  vite.config.ts
frontend/.devcontainer/: devcontainer.json
frontend/src/: app.html  sw.ts
frontend/src/lib/const/: icon.ts  navigation.ts  urls.ts
frontend/src/lib/context/: audio.ts
frontend/src/lib/rtc/: command.ts  index.ts  message.ts  types.ts
frontend/src/lib/service/: auth.ts  avs.ts  city.ts  group.ts  package.ts  province.ts  record.ts  role.ts  schedule.ts  user.ts  utils.ts
frontend/src/lib/stores/: auth.ts  toast.ts  ui.ts
frontend/src/lib/types/: calendar.ts  components.ts  navigation.ts  response.ts
frontend/src/lib/utils/: format.ts  schedule.ts  toast.ts  validation.ts
frontend/src/routes/: +error.svelte  +layout.svelte  +page.svelte
frontend/src/routes/dashboard/: +layout.svelte  +page.svelte
frontend/src/routes/forgot/: +page.svelte
frontend/src/routes/reset/: +page.svelte
frontend/src/styles/: app.css  calendar.scss  datepicker.scss  schedule_calendar.scss  timepicker.scss
rust/: .dockerignore  Cargo.toml  Dockerfile  README.md  docker-compose.yaml
rust/.devcontainer/: devcontainer.json
rust/configs/: asound.state  install-dev.bash  install.bash  myrts-api-dev.service  myrts-api.service  myrts-client-dev.service  myrts-client.service  nginx.conf  root@relay.myrts.id  run.sh  turnserver.conf  update-dev.bash  update.bash
rust/crates/api/: Cargo.toml
rust/crates/api-db/: Cargo.toml  diesel.toml  docker-compose.yaml
rust/crates/api-db/migrations/2023-10-12-171132_init/: down.sql  up.sql
rust/crates/api-db/migrations/2023-10-14-161512_user_table_edit/: up.sql
rust/crates/api-db/migrations/2023-10-15-082931_user_table_edit/: up.sql
rust/crates/api-db/migrations/2023-10-15-172757_avs_edit/: up.sql
rust/crates/api-db/migrations/2023-10-16-025608_schedule_record/: down.sql  up.sql
rust/crates/api-db/migrations/2023-10-19-234220_recording/: up.sql
rust/crates/api-db/migrations/2023-10-19-234720_recording/: up.sql
rust/crates/api-db/migrations/2023-10-20-001223_recording/: up.sql
rust/crates/api-db/migrations/2023-10-20-055648_roles/: up.sql
rust/crates/api-db/migrations/2023-10-21-033441_schedules/: up.sql
rust/crates/api-db/migrations/2023-10-21-104813_records/: up.sql
rust/crates/api-db/migrations/2023-10-21-105552_records/: up.sql
rust/crates/api-db/migrations/2023-10-21-110722_schedules/: up.sql
rust/crates/api-db/migrations/2023-10-21-122819_schedules/: up.sql
rust/crates/api-db/migrations/2023-10-21-172528_schedules/: up.sql
rust/crates/api-db/migrations/2023-10-23-073930_avs/: up.sql
rust/crates/api-db/migrations/2023-10-27-154300_records/: up.sql
rust/crates/api-db/migrations/2023-10-28-140320_avs/: up.sql
rust/crates/api-db/migrations/2023-11-02-072347_avs/: up.sql
rust/crates/api-db/src/: lib.rs
rust/crates/api-db/src/repos/: avs.rs  blacklist_token.rs  city.rs  docs_credential.rs  forgot_password.rs  mod.rs  package.rs  province.rs  records.rs  role.rs  schedules.rs  sessions.rs  user.rs  user_group.rs  verify.rs
rust/crates/api-rt/: Cargo.toml
rust/crates/api-rt/src/: lib.rs
rust/crates/api-rt/src/docs/: contacts.rs  docs.rs  infos.rs  mod.rs
rust/crates/api-rt/src/middlewares/: logic.rs  middleware.rs  mod.rs
rust/crates/api-rt/src/requests/: mod.rs
rust/crates/api-rt/src/responses/: mod.rs  response.rs
rust/crates/api-rt/src/routes/: docs.rs  mod.rs  route.rs  routes.rs
rust/crates/api-rt/src/schemas/: mod.rs
rust/crates/api/src/: lib.rs
rust/crates/api/src/middlewares/: auth.rs  docs.rs  error.rs  mod.rs
rust/crates/api/src/routes/: assets.rs  auth.rs  avs.rs  cities.rs  groups.rs  install.rs  mod.rs  packages.rs  provinces.rs  records.rs  roles.rs  schedules.rs  statistics.rs  streaming.rs  users.rs
rust/crates/audio/: Cargo.toml  build.rs  wrapper.h
rust/crates/audio/src/: audio.rs  decoder.rs  lib.rs
rust/crates/database/: Cargo.toml
rust/crates/database/src/: lib.rs
rust/crates/proto/: Cargo.toml
rust/crates/proto-db/: Cargo.toml
rust/crates/proto-db/src/: lib.rs  models.rs  schema.rs
rust/crates/proto-macro/: Cargo.toml
rust/crates/proto-macro/src/: lib.rs
rust/crates/proto/src/: client.rs  error.rs  lib.rs  server.rs
rust/crates/proto/src/app/: extractor.rs  mod.rs  service.rs  session.rs  state.rs  stream.rs
rust/crates/rtc/: Cargo.toml
rust/crates/rtc/src/: lib.rs
rust/crates/timeslots/: Cargo.toml
rust/crates/timeslots/src/: lib.rs
rust/crates/types/: Cargo.toml
rust/crates/types-rt/: Cargo.toml
rust/crates/types-rt/src/: lib.rs
rust/crates/types/src/: lib.rs
rust/crates/types/src/api/: avs.rs  blacklist_token.rs  city.rs  docs_credential.rs  forgot_password.rs  mod.rs  package.rs  province.rs  records.rs  role.rs  schedules.rs  schema.rs  session.rs  subscription.rs  user.rs  user_group.rs  verify.rs
rust/crates/types/src/proto/: mod.rs
rust/crates/utils/: Cargo.toml
rust/crates/utils/src/: audio.rs  crypto.rs  data.rs  encoding.rs  env.rs  files.rs  lib.rs  mail.rs  time.rs
rust/crates/utils/src/mail/: confirm_mail.html  reset_mail.html
shell/: Dockerfile
(+116 files in other folders)
