[package]
name = "api"
version = "0.1.0"
edition = "2021"
description = "API for the `myrts`"
license = "GPL-3.0-or-later"
authors = ["Ade M Ramdani <qcynaut@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-multipart = "0.6.1"
actix-web = "4.4.0"
serde = { version = "1.0.188", features = ["derive"] }
utoipa = { version = "3.5.0", features = ["chrono"], optional = true }
utoipa-rapidoc = { version = "0.1.0", features = [
    "actix-web",
], optional = true }
utoipa-redoc = { version = "0.1.0", features = ["actix-web"], optional = true }
utoipa-swagger-ui = { version = "3.1.5", features = [
    "actix-web",
], optional = true }
types = { path = "../types", features = ["api-db", "web"] }
api-rt = { path = "../api-rt" }
api-db = { path = "../api-db" }
utils = { path = "../utils" }
proto = { path = "../proto" }
futures-util = "0.3.28"
actix-cors = "0.6.4"
tokio = { version = "1.33.0", features = ["full"] }
timeslots = { path = "../timeslots" }

[features]
default = []
doc = [
    "utoipa",
    "utoipa-rapidoc",
    "utoipa-redoc",
    "utoipa-swagger-ui",
    "types/web-doc",
    "api-rt/doc",
]
