[package]
name = "audio"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
byteorder = "1.5.0"
libc = "0.2.149"
rodio = "0.17.3"

[build-dependencies]
bindgen = "0.66.1"
pkg-config = "0.3.27"
