[package]
name = "proto"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.33.0", features = ["full"] }
tokio-tungstenite = { version = "0.20.1", features = ["native-tls"] }
proto-macro = { path = "../proto-macro" }
futures-util = "0.3.28"
thiserror = "1.0.49"
serde = { version = "1.0.189", features = ["derive"] }
serde_json = "1.0.107"
log = "0.4.20"
rand = "0.8.5"
hex = "0.4.3"
pin-project-lite = "0.2.13"
futures-core = "0.3.28"
