[package]
name = "rtc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.20"
serde_json = "1.0.107"
thiserror = "1.0.50"
tokio = { version = "1.33.0", features = ["full"] }
webrtc = "0.9.0"
proto = { path = "../proto" }
types = { path = "../types", features = ["proto"] }

[features]
default = []
