[package]
name = "types"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = { version = "4.4.0", optional = true }
diesel = { version = "2.1.3", optional = true }
utoipa = { version = "3.5.0", features = ["chrono"], optional = true }
types-rt = { path = "../types-rt" }
api-rt = { path = "../api-rt", optional = true }
serde = { version = "1.0.188", features = ["derive"], optional = true }
chrono = { version = "0.4.31", features = ["serde"] }
actix-multipart = { version = "0.6.1", optional = true }

[features]
default = []
db = ["diesel", "types-rt/db"]
web = ["actix-web", "types-rt/web", "serde", "api-rt", "actix-multipart"]
api = ["api-rt"]
proto = ["serde"]
api-db = ["db", "api"]
web-doc = ["utoipa", "api-rt/doc"]
